--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -4,11 +4,11 @@
      mbc = 2            # number of ghost cells
 
 # Regridding optionsx
-     minlevel = 3         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     coarsen-delay = 0
+     smooth-refine = T
+     coarsen-delay = 1
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
@@ -24,7 +24,7 @@
      nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F       # subcycle in time ( = T or F).
+     subcycle = T       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -38,7 +38,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production    # verbosity
+     verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
