--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -3,10 +3,49 @@
      alpha = 0.5
 
 [Options]
+     mx = 8
+     my = 8
+     mbc = 2            # number of ghost cells
+
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     smooth-refine = T
+     coarsen-delay = 1
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
+
      minlevel = 2         # Minimum level (> 2 for squareddisk)
      maxlevel = 4         # Maximum levels of refinement
 
-# Mapping related functions
+     tfinal = 8.0         #
+
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.0025   # Initial time step for 'minlevel'
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     outstyle = 1         # Controls how often output files are produced
+     nout = 32
+     nstep = 1            # Only used if outstyle is 3
+
+     subcycle = T       # subcycle in time ( = T or F).
+
+# Equation info
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+
+# Diagnostics and debugging
+     check_conservation = F
+     run_diagnostics = F
+     trapfpe = T          # trap floating point exceptions
+     mpi_debug = F
+
+# File and console IO
+     verbosity = essential    # verbosity
+     serialout = T            # Works with Matlab
+     vtkout = 0               # Read into VisIt
+
+# mapping functions
      manifold = T         # Manifold
 
      # Squared disk mapping has to be shifted from [-1,1]x[-1,1] to [0,2]x[0,2]
@@ -15,3 +54,8 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
+     maux = 3             # maux  (store mcapa in 1, if we have it)
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
