--- a/applications/advection/2d/sphere/example0.ini
+++ b/applications/advection/2d/sphere/example0.ini
@@ -1,6 +1,63 @@
 [User]
-	example = 0           # 0 = pillowgrid
+	example = 0           # 0,1 = pillowgrid;  2 = cubedsphere
 
 [Options]
-    minlevel = 1
-    maxlevel = 5
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+
+     mbc = 2              # mbc
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+# Output
+     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     vtkout = F
+
+# Regridding
+     minlevel = 1         # Minimum level
+     maxlevel = 5        # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.1
+     smooth-refine = T
+     coarsen-delay=0
+
+# Time stepping
+     tfinal = 8.0         #
+
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 32            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.015625    # Initial time step for 'minlevel'
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     subcycle = T         # subcycle in time ( = T or F).
+
+# Diagnostics and debugging
+     verbosity = essential        # verbose
+     trapfpe = T          # Trap floating point exceptions
+     mpi_debug = F
+     check_conservation = F
+
+# Equations
+     meqn = 1             # meqn
+
+# Mapping
+     manifold = T         # Manifold
+
+     theta = 0           # Rotation angles (degrees)
+     phi = -25            # Rotation angle
+
+     scale = 1 1 1
+     shift = 0 0 0
+
+[clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 1            # mcapa
+     maux = 3             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
