--- a/applications/amrclaw/euler/2d/quadrants/example0.ini
+++ b/applications/amrclaw/euler/2d/quadrants/example0.ini
@@ -1,12 +1,65 @@
 [user]
 	example=0
+	gamma = 1.4
 
 [Options]
 	mx = 16
 	my = 16
 
-	minlevel = 1
-	maxlevel = 5
-
 # File and console IO
      verbosity = essential      # verbose
+
+# Regridding information
+     minlevel = 3               # Minimum level
+     maxlevel = 5               # Maximum levels of refinement
+     regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.4
+     coarsen_threshold = 0.1
+     smooth-refine=T
+     coarsen-delay = 1
+
+# Time stepping
+     tfinal = 0.8
+
+     use_fixed_dt = F           # Take a fixed time step
+     initial_dt = 0.001          # Initial time step for 'minlevel'
+     max_cfl = 1.0
+     desired_cfl = 0.9
+
+     outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 8                    # Used for all three out styles
+     nstep = 1                   # Only used if outstyle is 3
+
+     subcycle = T               # subcycle in time ( = T or F).
+
+# File and console IO
+     verbosity = production      # verbose
+     serialout = T               # ascii output
+
+# Debugging and diagnostics
+     trapfpe = T
+     mpi_debug = F
+     run_diagnostics = F
+     check_conservation = F
+
+# Equations and boundary conditions
+     meqn = 4             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+# Mapping and topology
+     manifold = F         # Manifold
+
+     # Used only if manifold = F (fclaw2d_map_nomap)
+     ax = 0
+     bx = 1
+     ay = 0
+     by = 1
+
+[clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 3           # mwaves
+     mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
