--- a/applications/advection/2d/sphere/example0.ini
+++ b/applications/advection/2d/sphere/example0.ini
@@ -1,9 +1,9 @@
 [User]
-	example = 0           # 0,1 = pillowgrid;  2 = cubedsphere
+	example = 1           # 0,1 = pillowgrid;  2 = cubedsphere
 
 [Options]
-     mx = 8               # mx_leaf
-     my = 8               # my_leaf
+     mx = 16               # mx_leaf
+     my = 16               # my_leaf
 
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
@@ -13,7 +13,7 @@
      vtkout = F
 
 # Regridding
-     minlevel = 1         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -36,7 +36,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics and debugging
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
