--- a/applications/advection/2d/filament/Makefile.am
+++ b/applications/advection/2d/filament/Makefile.am
@@ -13,6 +13,7 @@ applications_advection_2d_filament_filament_SOURCES = \
 	applications/advection/2d/filament/fclaw2d_map_pillowdisk.c \
 	applications/advection/2d/filament/fclaw2d_map_squareddisk.c \
 	applications/advection/2d/filament/fclaw2d_map_pillowdisk5.c \
+	applications/advection/2d/filament/fclaw2d_map_fivepatch.c \
 	applications/advection/2d/filament/psi.f \
 	applications/advection/2d/filament/setprob.f \
 	applications/advection/2d/filament/user_4.6/qinit.f \
