--- a/applications/advection/2d/torus/example1_cart.ini
+++ b/applications/advection/2d/torus/example1_cart.ini
@@ -2,11 +2,54 @@
      example = 1          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
 
 [Options]
+# Grid dimensions
+     mx = 16               # Interior dimensions of each grid
+     my = 16		  #
+     mbc = 2              # Number of ghost cells.
+
      minlevel = 0        # Minimum level
      maxlevel = 3        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.01
+     smooth-refine=T
+     coarsen-delay=0
 
-# Mapping
+# -----------------------------------------------------------
+# Basic ForestClaw options
+# -----------------------------------------------------------
+[Options]
+
+# Time stepping
+     tfinal = 4.0         #
+     initial_dt = 0.05    # Initial time step for 'minlevel'
+
+     use_fixed_dt = F     # Take a fixed time step
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
+     subcycle =  T        # subcycle in time ( = T or F).
+
+# Equation and boundary conditions
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+# Diagnostics and debugging
+     check_conservation = T
+     run_diagnostics = F
+     trapfpe = T          # trap floating point exceptions
+     mpi_debug = F
+
+# File and console IO
+
+     verbosity = production        # verbose
+     serialout = T
+
+# Mapping options
      manifold = T
      mi = 4       # Dimensions of the brick
      mj = 4
@@ -14,5 +57,15 @@
      periodic_x = T
      periodic_y = T
 
+# -----------------------------------------------------------
+# Package options
+# -----------------------------------------------------------
 [clawpack46]
-     mcapa = 1
+     claw_verbosity = 0
+     order  = 2 2         # normal and transverse order
+     mcapa = 1            # mcapa
+     maux = 3             # maux  (velocity stored in (2,3)
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
