--- a/applications/shallow/2d/sphere/example0.ini
+++ b/applications/shallow/2d/sphere/example0.ini
@@ -5,8 +5,8 @@
      mx = 16               # mx_leaf
      my = 16               # my_leaf
 
-     minlevel = 1          # Minimum level
-     maxlevel = 5          # Maximum levels of refinement
+     minlevel = 2          # Minimum level
+     maxlevel = 3          # Maximum levels of refinement
 
      regrid_interval = 1   # Regrid every 'regrid_interval' time steps.
      refine_threshold = 5e-3
@@ -17,18 +17,18 @@
      tfinal = 8.0         #
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 32            # Used for all three out styles;  has different meaning, though.
+     nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 2e-2    # Initial time step for 'minlevel'
+     initial_dt = 2.5e-2    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics
-     verbosity = essential        # verbos
+     verbosity = production        # verbos
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
