--- a/applications/amrclaw/euler/2d/shockbubble/example0.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example0.ini
@@ -17,14 +17,15 @@
      minlevel = 0               # Minimum level
      maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.5
-     coarsen_threshold = 0.1
+     refine_threshold = 0.05
+     coarsen_threshold = 0.01
      smooth-refine = T
      coarsen-delay = 0
+     smooth-level = 0
 
 # Time stepping
-     tfinal = 1.0          # Since we are not scaling the results
-     initial_dt = 5e-3          # Initial time step for 'minlevel'
+     tfinal = 0.75          # Since we are not scaling the results
+     initial_dt = 5e-4          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
      max_cfl = 1.0
@@ -53,16 +54,15 @@
      mthbc = 1 1 3 1      # mthbc(1) (left edge), etc.
 
 # Mapping and topology
-     manifold = T         # Manifold
+     manifold = F         # Manifold
 
      mi = 4
      mj = 1
 
-     # Scale to [-1,1]x[-0.25,0.25]
-     scale = 1 0.25 1
-
-     # shift cart map to [0,2]x[0,0.5]
-     shift = 1 0.25 1
+     ax = 0
+     bx = 2
+     ay = 0
+     by = 0.5
 
 
 
