--- a/applications/amrclaw/euler/2d/shockbubble/example0.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example0.ini
@@ -15,7 +15,7 @@
 
 # Regridding information
      minlevel = 0               # Minimum level
-     maxlevel = 5               # Maximum levels of refinement
+     maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.2
@@ -41,6 +41,9 @@
 # File and console IO
      verbosity = production      # verbose
      serialout = T               # ascii output
+     tikzout = T
+     tikz_figsize = 8 2          # needs to be the same as set by Matlab, for best results
+     tikz_prefix = "fc_sb_"
 
 # Debugging and diagnostics
      trapfpe = F
