--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -9,17 +9,17 @@
 
 [Options]
 
-     mx = 128
-     my = 128
+     mx = 8
+     my = 8
      mbc = 2
 
 # Regridding information
-     minlevel = 2               # Minimum level
-     maxlevel = 2               # Maximum levels of refinement
+     minlevel = 0               # Minimum level
+     maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
-     coarsen_threshold = 0.1
-     smooth-refine = F
+     coarsen_threshold = 0.2
+     smooth-refine = T
      coarsen-delay = 0
      smooth-level = 0
 
@@ -40,9 +40,12 @@
 
 # File and console IO
      verbosity = essential      # verbose
+
+     # File I/O
+     vtkout = F
      serialout = T             # ascii output
      tikzout = T
-     tikz_figsize = 8 2
+     tikz_figsize = 8 2    # Inches, used to scale tikz picture
 
 # Debugging and diagnostics
      trapfpe = F
