--- a/applications/amrclaw/euler/2d/shockbubble/Makefile.am
+++ b/applications/amrclaw/euler/2d/shockbubble/Makefile.am
@@ -5,6 +5,8 @@
 
 bin_PROGRAMS += applications/amrclaw/euler/2d/shockbubble/shockbubble
 
+include_HEADERS += applications/amrclaw/euler/2d/shockbubble/shockbubble_user.h
+
 applications_amrclaw_euler_2d_shockbubble_shockbubble_SOURCES = \
 	applications/amrclaw/euler/2d/shockbubble/shockbubble.cpp \
 	applications/amrclaw/euler/2d/shockbubble/shockbubble_user.cpp \
