--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -11,6 +11,8 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/utility_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/topo_module.f90 \
+	src/solvers/fc2d_geoclaw/amrlib_source/regions_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/gauges_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/qinit_module.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_set_modules.f90 \
 	src/solvers/fc2d_geoclaw/amrlib_source/opendatafile.f \
