--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,7 +10,7 @@
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -42,6 +42,7 @@
 
 # Diagnostics and debugging
      conservation-check = F
+     compute-error = T
      run-user-diagnostics = F
      trapfpe = F          # trap floating point exceptions
      mpi_debug = F
