--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -46,7 +46,7 @@
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
-     run-user-diagnostics = F
+     run-user-diagnostics = T
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
@@ -61,7 +61,7 @@
      ay = -100
      by = 100
 
-     mi = 3
+     mi = 2
      mj = 1
 
 
