--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -6,8 +6,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 8               # mx_leaf
-     my = 8               # my_leaf
+     mx = 32               # mx_leaf
+     my = 32               # my_leaf
      mbc = 2              # mbc
 
 # Equations
@@ -15,7 +15,7 @@
 
 # Refinement
      minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -25,19 +25,19 @@
 
 # Time stepping
      tfinal = 5.0         #
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02    # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 40            # Used for all three out styles;  has different meaning, though.
+     nout = 1            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # Console and file IO
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
